# excel-to-sage-journal-entry

./: .gitignore  README.md  SageJournalEntry.spec  Translations.md  main.py  pyproject.toml
core/auth/: auth.py
core/config/: config.py  i18n.py  logging.py  settings.py
core/handler/: excel_handler.py
core/services/: api_service.py  processing_service.py  validation_service.py
core/utils/: utils.py
docs/: instrucoes.html  instructions.html
excel/: nominal_ledger_journal_template.xlsm  send_sage_old.xlsm  teste_1.xlsx  teste_2.xlsx  teste_3.xlsx  teste_macro.xlsm  teste_sage.xlsx  teste_sage_v1.xlsx  teste_sage_v2.xlsx  teste_sage_v3.xlsx
locales/: messages.pot
locales/de_DE/LC_MESSAGES/: messages.mo  messages.po
locales/en/LC_MESSAGES/: messages.mo  messages.po
locales/en_GB/LC_MESSAGES/: messages.mo  messages.po
locales/pt_PT/LC_MESSAGES/: messages.mo  messages.po
