[project]
name = "excel-automation-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pandas>=2.3.3",
  "requests>=2.32.5",
  "xlwings>=0.33.16",
  "pywin32; sys_platform == 'win32'",
]

[dependency-groups]
dev = ["pyinstaller>=6.16.0", "babel>=2.17.0"]

[tool.ruff]
line-length = 120
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
# Lista de regras a serem ignoradas em todo o projeto
ignore = [
  "PLC2701", # Ignora o "Private name import `_`"
  "PLR2004", # Ignora o "Too few arguments for function call"
]

[tool.ruff.format]
preview = true
quote-style = 'single'
